arc/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actions-runner-ingress
  namespace: actions-runner-system
spec:
  ingressClassName: nginx
  rules:
    - host: YOUR_DOMAIN
      http:
        paths:
          - path: /actions-webhook
            pathType: Prefix
            backend:
              service:
                name: actions-runner-controller-github-webhook-server
                port:
                  number: 80
